# math-pdf-ocr

./: .gitignore  AGENTS.md  README.md  math-pdf-ocr.service  pyproject.toml  run.py  start.sh  test_runner.py
backend/: config.py  main.py  ocr_engine.py  pdf_utils.py
frontend/: app.js  index.html  style.css
test-data/: test1.tex
