[project]
name = "math-pdf-ocr"
version = "0.1.0"
description = "Web-based PDF viewer with math OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "PyMuPDF>=1.25.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
pix2tex = ["pix2tex[api]"]
nougat = ["nougat-ocr"]

[tool.uv]
dev-dependencies = []
