[project]
name = "math-pdf-ocr"
version = "0.1.0"
description = "Web-based PDF viewer with math OCR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "PyMuPDF>=1.25.0",
    "Pillow>=10.1.0",
    "python-multipart>=0.0.20",
    "optimum>=2.2.0",
    "onnxruntime>=1.20",
]

[project.optional-dependencies]
pix2tex = ["pix2tex[api]"]
texify = ["texify", "transformers>=4.35.0,<5.0.0"]

[tool.uv]
dev-dependencies = []
